tests/compile_fail/add_assign/unknown_field_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/add_assign/unknown_field_attribute.rs:2:25
  |
2 | struct Foo(#[add_assign(unknown)] i32);
  |                         ^^^^^^^
